// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`prints useful error for environment methods after test is done w/ \`waitNextEventLoopTurnForUnhandledRejectionEvents\` 1`] = `
"    ReferenceError: You are trying to access a property or method of the Jest environment outside of the scope of the test code.

       9 | test('access environment methods after done', () => {
      10 |   setTimeout(() => {
    > 11 |     jest.clearAllTimers();
         |          ^
      12 |   }, 0);
      13 | });
      14 |"
`;

exports[`prints useful error for environment methods after test is done w/o \`waitNextEventLoopTurnForUnhandledRejectionEvents\` 1`] = `
"ReferenceError: You are trying to access a property or method of the Jest environment after it has been torn down. From __tests__/afterTeardown.test.js.

       9 | test('access environment methods after done', () => {
      10 |   setTimeout(() => {
    > 11 |     jest.clearAllTimers();
         |          ^
      12 |   }, 0);
      13 | });
      14 |"
`;
